k8s/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: heli-securite-website-lb
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-protocol: "http"
spec:
  type: LoadBalancer
  selector:
    app: heli-securite-website
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
