k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: heli-securite-website-service
spec:
  selector:
    app: heli-securite-website
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
